Trying to push navigation links to the right side

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
             </div>
             <nav class="main-navigation">
                 <ul>
-                    <li><a href="#">Free resources</a></li>
-                    <li><a href="#">ESL Support</a></li>
-                    <li><a href="#">Join Our Mission</a></li>
-                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="">Free resources</a></li>
+                    <li><a href="">ESL Support</a></li>
+                    <li><a href="">Join Our Mission</a></li>
+                    <li><a href="">Contact Us</a></li>
                 </ul>
             </nav>
         </div>
