Design changes and adding some content into main section

--- a/index.html
+++ b/index.html
@@ -30,7 +30,13 @@
 
     <main>
         <div class="content-body">
-            <h2>Add your content here</h2>
+            <div id="landing-message">
+                <h1>Supporting struggling students on the path to academic success</h1>
+            </div>
+            <p>Get back on track with our free resources, ESL-tailored support and more</p>
+            <div>
+                <button id="access-resources">Access Resources</button>
+            </div>
         </div>
     </main>
 
@@ -42,10 +48,7 @@
                 </div>
 
                 <div id="footer-text">
-                    <p>Registration numbers: England and Wales 288701, Scotland SC039479.</p>
-                    <p>6th floor, 20 Canada Square, London, E14 5NN.</p>
-                    <p>WaterAid - water charity | © Copyright WaterAid - All rights reserved.</p>
-                    <p>Terms and conditions | Privacy notice | Cookies policy</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                 </div>
 
                 <div class="footer-row">
