Some text changes

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </div>
             <nav class="main-navigation">
                 <ul>
-                    <li><a href="">Free resources</a></li>
+                    <li><a href="">Free Resources</a></li>
                     <li><a href="">ESL Support</a></li>
                     <li><a href="">Join Our Mission</a></li>
                     <li><a href="">Contact Us</a></li>
@@ -35,7 +35,7 @@
             </div>
             <p>Get back on track with our free resources, ESL-tailored support and more</p>
             <div>
-                <button id="access-resources">Access Resources</button>
+                <button id="access-resources">Free Resources</button>
             </div>
         </div>
     </main>
