Centering elements and improving design

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="site-container">
             <div class="logo">
                 <a href="index.html">
-                    <img src="" alt="our logo">
+                    <img src="StudentBridge.png" alt="our logo">
                 </a>
             </div>
             <nav class="main-navigation">
@@ -44,7 +44,7 @@
         <div class="footer-container">
             <div class="row">
                 <div id="footer-logo-section">
-                    <a href="index.html"><img id="footer-logo" src="" alt="Logo"></a>
+                    <a href="index.html"><img id="footer-logo" src="StudentBridge.png" alt="Logo"></a>
                 </div>
 
                 <div id="footer-text">
