Still trying to centre content and some more design improvements

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
             <p>Get back on track with our free resources, ESL-tailored support and more</p>
             <div>
-                <button id="access-resources">Free Resources</button>
+                <a href=""><button id="access-resources">Free Resources</button></a>
             </div>
         </div>
     </main>
